# tsp

./: .editorconfig  .eslintignore  .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  README.md  SUPPORT.md  eslint.config.js  install.ps1  install.sh  marketplace.json  package-lock.json  package.json
.claude/: settings.json
.claude-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  REPO_CONFIG.md
.opencode-plugin/: config.json
.tsp/: loop.example.yaml
commands/: agent-dev.md  build-fix.md  code-review.md  dashboard.md  evolve.md  goal.md  handoff.md  harness-audit.md  heartbeat.md  learn-eval.md  learn.md  loop-start.md  multi-backend.md  multi-frontend.md  pause.md  plan.md  pua.md  quick.md  replay.md  resume.md  tdd.md  team-closeout.md  team-execute.md  team-help.md  team-intake.md  team-plan.md  team-release.md  team-review.md  triage.md  trigger-pipeline.md  update-codemaps.md  verify.md
contexts/: dev.md  research.md  review.md
crates/oris-claude-bridge/: Cargo.toml  Cross.toml
crates/oris-claude-bridge/src/: claude_gene.rs  env_fingerprint.rs  evolution_state.rs  gene_store.rs  governor.rs  main.rs  replay.rs  replay_graph.rs  signal.rs  solidify.rs  solidify_graph.rs  stats.rs  store.rs
docs/: index.md
examples/: INDEX.md  ai-eval-platform-CLAUDE.md  claude-conversation-script.md  claude-scenario-playbook.md  codex-conversation-script.md  codex-scenario-playbook.md  data-analytics-dashboard-CLAUDE.md  data-ml-pipeline-CLAUDE.md  (+20 more)
(+587 files in other folders)
